--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,15 @@
         "browser": true,
         "es2021": true
     },
+    "settings": {
+        "react":{
+            "version":"detect"
+        }
+    },
     "extends": [
         "plugin:react/recommended",
-        "standard-with-typescript"
+        "standard-with-typescript",
+        "pulgin:react-hooks/recommended"
     ],
     "overrides": [
     ],
@@ -17,5 +23,8 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": "off",
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
