--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "*"
   }
 }
